# ocj

./: README.md
obsidian/ocj/: Взаимодействие.md
obsidian/ocj/.obsidian/: workspace.json
ocj_client_cli/: Cargo.toml
ocj_config/: Cargo.toml
ocj_config/src/: lib.rs
ocj_machine/: Cargo.toml
ocj_machine/src/: file.rs  judge.rs  main.rs  server.rs
ocj_machine/tests/1/: checker.cpp
ocj_server/: Cargo.toml
ocj_server/src/: auth.rs  contest.rs  contest_time.rs  error.rs  file.rs  machine.rs  main.rs
ocj_server/src/server/: admin.rs  client.rs  machine.rs  mod.rs
ocj_server/tests/1/: checker  config.json
ocj_server_admin_cli/: Cargo.toml
ocj_server_admin_cli/src/: file.rs  main.rs  ui.rs
