[package]
name = "ocj_server"
version = "0.1.0"
edition = "2021"

[dependencies]
ocj_config = {path = "../ocj_config"}

rand = {version = "*"}

tokio = {version = "*", features = ["full"]}
tokio-tungstenite = {version = "*"}
futures = {version = "*"}
axum = {version = "*"}
tower-http = {version = "*"}

local-ip-address = {version = "*"}

serde = {version = "*", features = ["derive"]}
serde_json = {version = "*"}

env_logger = {version = "*"}
log = {version = "*"}

thiserror = {version = "*"}

sha2 = {version = "*"}